# hiivmind-corpus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  INSTALL.md  README.md  gemini-extension.json  openclaw.plugin.json  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.hiivmind/corpus/: registry.yaml
agents/: source-scanner.md
commands/: hiivmind-corpus.md
commands/hiivmind-corpus/: intent-mapping.yaml  workflow.yaml
doc/adr/: 0001-awareness-skill-for-plugin-capability-documentation.md
docs/: Yaml_Workflows.md  blog-documentation-on-demand.md  blog-how-i-built-it.md  cross-repo-marketplace-options.md  doc-skill-plugin-spec.md  enhance-keyword-tagging-proposal.md  future-enhancements.md  migrate-to-pattern-documentation.md
docs/adr/: 0002-skill-refactoring-for-progressive-disclosure.md  0003-generated-docs-source-type.md  (+5 more)
references/: batch-upgrade.md  implementation-examples.md  marketplace-templates.md  template-placeholders.md  upgrade-checklists.md  upgrade-templates.md
templates/: claude-data-only.md.template  claude.md.template  config.yaml.template  corpus-refresh.yml.template  gitignore.template  index.md.template  marketplace-claude.md.template  marketplace.json.template  navigate-command.md.template  navigate-skill.md.template  plugin.json.template  project-awareness.md.template  readme-data-only.md.template  readme.md.template  render-index.sh
(+159 files in other folders)
